<resources>
    <string name="app_name">TestEspresso</string>

    <string name="hello_world">Hello</string>
    <string name="action_settings">Settings</string>
</resources>
